Fix horizontal scrollbar for navbar items.

--- a/css/main.css
+++ b/css/main.css
@@ -115,4 +115,7 @@
     .navbar-nav{
         margin: 5px -15px;
     }
+    .navbar-collapse.collapse{
+        overflow-x: hidden;
+    }
 }
